# archivist

./: .gitignore  CLAUDE.md  README.md  config.local.yaml.example  config.yaml  pyproject.toml
.claude/skills/archive-add/: SKILL.md
.claude/skills/archive-search/: SKILL.md
.claude/skills/arxiv-digest/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/digest-monthly/: SKILL.md
.claude/skills/digest-weekly/: SKILL.md
.claude/skills/read-doc/: SKILL.md
.claude/skills/read-paper/: SKILL.md  update-data-schema.md
.claude/skills/refine-rubric/: SKILL.md
scripts/: archive-doc.py  download-paper.py  extract-figures.py  retag-papers.py
scripts/cron/: crontab.txt  daily-digest.sh  monthly-digest.sh  weekly-digest.sh
src/archivist/: __init__.py  cli.py  config.py  mcp_server.py  models.py  utils.py
src/archivist/services/: arxiv_fetch.py  arxiv_scorer.py  benchmark.py  claude_runner.py  dag.py  digest.py  digest_runner.py  doc_store.py  feedback.py  lark_push.py  paper_store.py  pdf_extract.py  reading_apply.py  tag_pending.py  tag_registry.py
src/archivist/services/digest_prompts/: daily_theme.md  monthly_theme.md  score_papers.md  weekly_theme.md
src/archivist/web/: __init__.py  build.py  data.py
src/archivist/web/routes/: reading.py
src/archivist/web/static/: style.css
src/archivist/web/templates/: base.html  benchmark.html  graph.html
src/archivist/web/templates/docs/: detail.html  index.html
src/archivist/web/templates/reading/: detail.html  digest_detail.html  index.html
